--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,1 +1,11 @@
  /* mail list */
+
+ .mail-list ul li {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+
+     padding: 0.5em;
+     border-top: 1px solid gray;
+     border-bottom: 1px solid gray;
+ }
