--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,5 +1,10 @@
  /* mail list */
 
+ .mail-list ul {
+     padding: 0;
+     margin: 0;
+ }
+
  .mail-list ul li {
      display: flex;
      justify-content: space-between;
@@ -8,4 +13,50 @@
      padding: 0.5em;
      border-top: 1px solid gray;
      border-bottom: 1px solid gray;
+ }
+
+ .mail-list ul li.read {
+     background-color: rgba(239, 239, 239, 0.714);
+ }
+
+ .mail-list ul li h3 {
+     text-overflow: ellipsis;
+     overflow: hidden;
+     height: 1.2em;
+     white-space: nowrap;
+ }
+
+ .mail-list ul li button {
+     position: relative;
+ }
+
+ .mail-list ul li div {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     translate: -50% -50%;
+     z-index: -1;
+
+     scale: 0;
+     width: 50px;
+     height: 50px;
+     background-color: rgba(106, 105, 105, 0.26);
+
+     border-radius: 50%;
+     transition: 0.3s;
+ }
+
+ .mail-list ul li .star-btn {
+     background-color: transparent;
+     border-radius: 50%;
+     transition: 0.3s;
+
+ }
+
+ .mail-list ul li .star-btn:hover div {
+     scale: 1;
+ }
+
+ .mail-list ul li .star-btn:hover {
+     scale: 1;
  }
