--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -7,23 +7,68 @@
 
  .mail-list ul li {
      display: flex;
-     justify-content: space-between;
      align-items: center;
 
-     padding: 0.5em;
-     border-top: 1px solid gray;
-     border-bottom: 1px solid gray;
+     font-size: 1rem;
+     padding: 0 1em;
+
+     height: 40px;
+     cursor: pointer;
+
+     box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
+
+     background-color: var(--clr-mail);
+ }
+
+ .mail-list ul li:hover {
+     position: relative;
+     z-index: 2;
+
+     border-collapse: collapse;
+
+     box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
  }
 
  .mail-list ul li.read {
-     background-color: rgba(239, 239, 239, 0.714);
+     background-color: var(--clr-mail-read);
+ }
+
+ .mail-list ul li h2 {
+     font-size: 0.875em;
+     min-width: 12em;
+
+     text-overflow: ellipsis;
+     overflow: hidden;
+     white-space: nowrap;
+
+     margin-right: 2.2857em;
  }
 
  .mail-list ul li h3 {
+     font-size: 0.875em;
+
      text-overflow: ellipsis;
      overflow: hidden;
-     height: 1.2em;
      white-space: nowrap;
+
+     padding-right: 0.714286em;
+
+     margin-right: auto;
+
+ }
+
+ .mail-list ul li h3 .gray {
+     color: var(--clr-mail-list-body);
+ }
+
+ .mail-list ul li h4 {
+     display: flex;
+     justify-content: flex-end;
+     align-items: center;
+
+     margin-left: 28px;
+     min-width: 56px;
+     font-size: 0.875em;
  }
 
  .mail-list ul li button {
@@ -38,25 +83,22 @@
      z-index: -1;
 
      scale: 0;
-     width: 50px;
-     height: 50px;
+     width: 40px;
+     height: 40px;
      background-color: rgba(106, 105, 105, 0.26);
 
      border-radius: 50%;
-     transition: 0.3s;
+     transition: 0.1s;
  }
 
  .mail-list ul li .star-btn {
      background-color: transparent;
      border-radius: 50%;
-     transition: 0.3s;
+     transition: 0.1s;
 
+     margin-right: 0.714286em;
  }
 
  .mail-list ul li .star-btn:hover div {
-     scale: 1;
- }
-
- .mail-list ul li .star-btn:hover {
      scale: 1;
  }
