--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -1,3 +1,8 @@
 :root {
     --main-bg-color: lightblue;
+
+    --clr-mail: #ffffff;
+    --clr-mail-read: #f2f6fc;
+
+    --clr-mail-list-body: rgb(95, 99, 104);
 }
