--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@
 /* @import './apps/mail/pages/MailIndex.css'; */
 
 /* Cmps */
-
+@import './apps/note/cmps/NoteList.css';
 @import './cmps/UserMsg.css';
 @import './cmps/AppHeader.css';
 
