--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@
 
 /* @import './apps/note/pages/NoteIndex.css'; */
 
-/* @import './apps/mail/pages/MailIndex.css'; */
+@import './apps/mail/pages/MailIndex.css';
 
 /* Cmps */
 @import './apps/note/cmps/NoteList.css';
@@ -22,3 +22,4 @@
 @import './cmps/AppHeader.css';
 
 @import './apps/mail/cmps/MailList.css';
+@import './apps/mail/cmps/SideBar.css';
