--- a/assets/css/apps/mail/cmps/NewCompose.css
+++ b/assets/css/apps/mail/cmps/NewCompose.css
@@ -1,10 +1,11 @@
-.new-compose {
+.new-compose form {
     display: flex;
     flex-direction: column;
 
     position: fixed;
     bottom: 0;
     right: 20px;
+    z-index: 9;
 
     background-color: white;
 }
