--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,7 @@
 
 /* Cmps */
 @import './apps/note/cmps/NoteList.css';
+@import './apps/note/pages/NoteIndex.css';
 @import './cmps/UserMsg.css';
 @import './cmps/AppHeader.css';
 
