--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,3 +25,4 @@
 @import './apps/mail/cmps/MailList.css';
 @import './apps/mail/cmps/SideBar.css';
 @import './apps/mail/cmps/NewCompose.css';
+@import './apps/mail/cmps/Header.css';
