--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -11,4 +11,8 @@
     --clr-selected-side-bar: #001d35;
 
     --clr-mail-list-btn-shadow: rgba(100, 121, 143, 0.12);
+    --clr-search-bg: #eaf1fb;
+
+    --clr-search-bar-shadow-read-filter: rgba(60, 64, 67, .1);
+    --clr-search-bar-shadow-read-filter-hover: rgba(60, 64, 67, 0.229);
 }
