--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -1,12 +1,51 @@
  /* mail list */
 
+
  .mail-list {
      width: 100%;
+     overflow-y: hidden;
+     border-radius: 1em;
+     margin-left: 72px;
+     height: calc(100vh - 143px);
+     margin-bottom: 1em;
+
+ }
+
+ .mail-list .sorting-container {
+     display: flex;
+     align-items: center;
+     gap: 1.3em;
+     padding-left: 1em;
+     height: 3em;
+     background-color: var(--clr-mail);
+
+     box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
+ }
+
+ .mail-list .sorting-container button {
+     padding: 0.4em 0.8em;
+     background-color: var(--clr-mail);
+     border-radius: 1em 2em;
+     border: 1px solid rgba(113, 113, 113, 0.41);
+     box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
+
+     cursor: pointer;
+     transition: 0.1s;
+ }
+
+ .mail-list .sorting-container button:hover {
+     scale: 1.03;
+ }
+
+ .mail-list .sorting-container button.active {
+     background-color: var(--clr-mail-read);
  }
 
  .mail-list ul {
      padding: 0;
      margin: 0;
+     height: 100%;
+     overflow-y: scroll;
  }
 
  .mail-list ul li {
