--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -8,8 +8,9 @@
      margin-left: 72px;
      height: calc(100vh - 143px);
      margin-bottom: 1em;
-
+     transition: 0.4s;
  }
+
 
  .mail-list .sorting-container {
      display: flex;
