--- a/assets/css/apps/mail/cmps/SideBar.css
+++ b/assets/css/apps/mail/cmps/SideBar.css
@@ -15,7 +15,8 @@
     transition: 0.4s;
 }
 
-.side-bar:hover {
+.side-bar:hover,
+.side-bar.open {
     width: 256px;
 }
 
@@ -56,12 +57,14 @@
     transition: 0.1s;
 }
 
-.side-bar:hover .compose-btn {
+.side-bar:hover .compose-btn,
+.side-bar.open .compose-btn {
     min-width: 8.428571em;
     padding-right: 1.71428857em;
 }
 
-.side-bar:hover .compose-btn:after {
+.side-bar:hover .compose-btn:after,
+.side-bar.open .compose-btn:after {
     opacity: 1;
     width: fit-content;
 }
@@ -111,12 +114,14 @@
 
 }
 
-.side-bar:hover .btn::before {
+.side-bar:hover .btn::before,
+.side-bar.open .btn::before {
     display: block;
 
 }
 
-.side-bar:hover .btn::after {
+.side-bar:hover .btn::after,
+.side-bar.open .btn::after {
     display: block;
 
 }
@@ -146,7 +151,8 @@
 }
 
 
-.side-bar:hover .btn {
+.side-bar:hover .btn,
+.side-bar.open .btn {
     justify-content: flex-start;
 
     background: none;
@@ -179,7 +185,8 @@
 }
 
 
-.side-bar:hover .btn .unread-mails {
+.side-bar:hover .btn .unread-mails,
+.side-bar.open .btn .unread-mails {
     opacity: 0;
     width: 0;
     height: 0;
