--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,3 +26,4 @@
 @import './apps/mail/cmps/SideBar.css';
 @import './apps/mail/cmps/NewCompose.css';
 @import './apps/mail/cmps/Header.css';
+@import './apps/mail/cmps/MailDetails.css';
