--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -21,7 +21,10 @@
   cursor: pointer;
 }
 
-
+.note-preview div img {
+  border: none;
+  border-radius: 10px;
+}
 
 .note-preview-scrollable {
   padding-bottom: 1em; 
