--- a/assets/css/apps/note/pages/NoteIndex.css
+++ b/assets/css/apps/note/pages/NoteIndex.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-rows: auto auto 1fr;
     background-color: #212121c0;
-    height: 100vh;
     padding: 10px;
+    height: 100%;
   }
   
   .note-edit {
