--- a/assets/css/apps/mail/cmps/MailDetails.css
+++ b/assets/css/apps/mail/cmps/MailDetails.css
@@ -8,3 +8,29 @@
     transition: 0.4s;
     background-color: white;
 }
+
+.mail-details .tool-bar {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0 1em;
+    margin-right: 1em;
+    height: 3em;
+}
+
+.mail-details .tool-bar a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.875rem;
+    color: #444444;
+
+    border-radius: 50%;
+    background-color: none;
+    width: 40px;
+    height: 40px;
+}
+
+.mail-details .tool-bar a:hover {
+    background-color: var(--clr-search-bar-shadow-read-filter);
+}
