--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -26,7 +26,7 @@
  .mail-list .sorting-container button {
      padding: 0.4em 0.8em;
      background-color: var(--clr-mail);
-     border-radius: 1em 2em;
+     border-radius: 1em;
      border: 1px solid rgba(113, 113, 113, 0.41);
      box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
 
