--- a/assets/css/apps/note/pages/NoteIndex.css
+++ b/assets/css/apps/note/pages/NoteIndex.css
@@ -4,6 +4,7 @@
     background-color: #212121c0;
     padding: 10px;
     height: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   .note-edit {
@@ -11,13 +12,7 @@
     justify-items: center;
   }
   
-  .note-accordion {
-    display: grid;
-    grid-auto-rows: auto;
-    padding: 10px;
-    margin-bottom: 10px;
-    transition: border 0.3s ease;
-  }
+
   
   .note-accordion.accordion-open {
     border: 2px solid white;
