--- a/assets/css/apps/note/pages/NoteIndex.css
+++ b/assets/css/apps/note/pages/NoteIndex.css
@@ -1,8 +1,7 @@
 .note-index {
     display: grid;
     grid-template-rows: auto auto 1fr;
-    background-color: #212121c0;
-    padding: 10px;
+    background-color: #212121;
     height: 100%;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
