--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@
 @import './apps/mail/pages/MailIndex.css';
 
 /* Cmps */
+@import './apps/note/cmps/NoteFilter.css';
 @import './apps/note/cmps/NoteList.css';
 @import './apps/note/pages/NoteIndex.css';
 @import './cmps/UserMsg.css';
