--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -20,4 +20,6 @@
 
     --clr-search-bar-shadow-read-filter: rgba(60, 64, 67, .1);
     --clr-search-bar-shadow-read-filter-hover: rgba(60, 64, 67, 0.229);
+
+    --clr-from-mail: #5e5e5e;
 }
