--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -1,5 +1,5 @@
 .note-accordion.accordion-open {
-    border: 2px solid white;
+    border: 1px solid var(--clr-note-border);
     border-radius: 5px;
   }
   
@@ -8,11 +8,13 @@
     color: white;
     background-color: transparent;
     font-size: 1.5em;
-    border: 1px solid white;
+    border: 1px solid var(--clr-note-border);
     border-radius: 5px;
     padding: 0.7em;
   }
-  
+  .accordion-title.active {
+    border: none;
+  }
 
   
   .accordion-text {
@@ -37,6 +39,7 @@
   
   .accordion-body {
     padding: 10px;
+
   }
 
 
@@ -56,12 +59,12 @@
   .note-accordion-edit{
     display: grid;
     grid-auto-rows: auto 1fr auto;
-    gap: 10px;
+    gap: 2em;
     padding: 1.5em;
+    width: 40em;
     box-shadow: 0 0.1em 1em rgba(0, 0, 0, 1);
-    border: none;
+    border: var(--clr-note-border) 1px solid;
     border-radius: 10px;
-    transition: border 0.3s ease;
     height: fit-content;
   }
   
@@ -71,15 +74,39 @@
     user-select: none;
     color: white;
     outline: none;
-    border: #f4f4f4 1px solid ;
+    border: var(--clr-note-border) 1px solid ;
+    border-radius: 15px;
+
     resize: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1em;
     padding :1em;
   }
   
-  .note-accordion-edit input[type="text"]{
+  .note-accordion-edit input[name="title"]{
     font-weight: bold;
     font-size: 1.3em;
-  
   }
+
+  .note-accordion-edit img {
+    border: rgba(255, 255, 255, 0.267) 1px solid;
+    border-radius: 15px;
+  }
+
+  .color-input{
+    display: none;
+  }
+
+  .note-accordion-edit button , label{
+    border: none;
+    background-color: transparent;
+    color: white;
+    font-size: 1.5em;
+  }
+  .note-buttons {
+    gap: 2em;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 1em;
+  }
+  
