--- a/assets/css/apps/note/cmps/NoteFilter.css
+++ b/assets/css/apps/note/cmps/NoteFilter.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center; 
   margin-bottom: 1.5em; 
-  padding: 0.6em;
-  border-bottom: white 1px solid;
+  padding: 0.3em;
+  border-bottom: var(--clr-note-border) 1px solid;
 }
 
 .note-filter form {
@@ -16,9 +16,9 @@
 
 .note-filter input[type="text"],
 .note-filter select {
-  background-color: transparent;
-  border-radius: 4px; 
-  border: white 1px solid;
+  background-color: var(--clr-note-filter-bcg);
+  border-radius: 5px; 
+  border: none;
   padding: 1em;
   margin-right: 10px;
   color: white;
