--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -7,8 +7,7 @@
 }
 
 .note-item {
-  background-color: #f4f4f4;
-  border: white 1px solid;
+  border: var(--clr-note-border) 1px solid;
   border-radius: 10px;
   padding: 1em;
   color: white;
@@ -16,8 +15,11 @@
   cursor: pointer;
   margin-bottom: 1em;
   display: inline-block;
-  width: 100%; 
+  width: 100%;
   transition: transform 0.2s ease-in-out;
+  word-wrap: break-word;
+  white-space: normal;
+  height: auto;
 }
 
 .note-item:hover {
@@ -31,12 +33,6 @@
 }
 
 
-.note-buttons {
-  padding: 1em;
-  display: flex;
-  justify-content: flex-end;
-
-}
 
 
 
