--- a/assets/css/apps/note/pages/NoteIndex.css
+++ b/assets/css/apps/note/pages/NoteIndex.css
@@ -1,9 +1,9 @@
 .note-index {
     display: grid;
     grid-template-rows: auto auto 1fr;
-    background-color: #212121;
+    background-color: var(--clr-note-main-bcg);
     height: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
   }
   
   .note-edit {
