--- a/assets/css/setup/variables.css
+++ b/assets/css/setup/variables.css
@@ -20,4 +20,8 @@
 
     --clr-search-bar-shadow-read-filter: rgba(60, 64, 67, .1);
     --clr-search-bar-shadow-read-filter-hover: rgba(60, 64, 67, 0.229);
+
+    --clr-note-main-bcg : #1f2224;
+    --clr-note-filter-bcg : #525456;
+    --clr-note-border : #606368;
 }
