--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -1,7 +1,7 @@
 .note-list {
   column-count: 5; 
   column-gap: 1em; 
-  padding: 6em;
+  padding: 2em 4em 1em 4em;
   height: 100%;
   overflow: auto; 
 }
