--- a/assets/css/apps/note/cmps/NoteFilter.css
+++ b/assets/css/apps/note/cmps/NoteFilter.css
@@ -73,8 +73,8 @@
   display: flex;
   align-items: center;
   border-radius: 50%;
-  width: 2em;
-  height: 2em;
+  width: 1.8m;
+  height: 1.8em;
   background: none;
   cursor: pointer;
 }
