--- a/assets/css/apps/mail/cmps/Header.css
+++ b/assets/css/apps/mail/cmps/Header.css
@@ -1,4 +1,7 @@
 .mail-index .mail-index-header {
+    grid-row: 1;
+    grid-column: 1/-1;
+
     display: flex;
     align-items: center;
     height: 63px;
