--- a/assets/css/apps/mail/cmps/SideBar.css
+++ b/assets/css/apps/mail/cmps/SideBar.css
@@ -2,17 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-    position: fixed;
-    top: 126px;
-    bottom: 0;
-    left: 0;
-
+    position: relative;
     z-index: 8;
 
-    width: 72px;
+
+    width: 100%;
     background-color: var(--clr-bg-side-bar);
-    transition: 0.4s;
+    transition: 0.2s;
 }
 
 .side-bar.hover,
