--- a/assets/css/cmps/AppNavigator.css
+++ b/assets/css/cmps/AppNavigator.css
@@ -21,6 +21,11 @@
     box-shadow: rgba(0, 0, 0, 0.30) 0px 8px 10px 1px, rgba(0, 0, 0, 0.30) 0px 3px 14px 2px, rgba(0, 0, 0, 0.3) 0px 5px 5px -3px;
 }
 
+.app-navigator.hidden {
+    height: 0;
+    visibility: hidden;
+}
+
 .app-navigator .box {
     padding: 1em 1.5em;
     cursor: pointer;
