--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -5,9 +5,9 @@
      width: 100%;
      overflow-y: hidden;
      border-radius: 1em;
-     height: calc(100vh - 143px);
+     height: calc(100vh - 63px);
      margin-bottom: 1em;
-     transition: 0.1s;
+     transition: 0.4s;
  }
 
 
@@ -25,7 +25,7 @@
  .mail-list .sorting-container button {
      padding: 0.4em 0.8em;
      background-color: var(--clr-mail);
-     border-radius: 1em;
+     border-radius: 1em 2em;
      border: 1px solid rgba(113, 113, 113, 0.41);
      box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
 
