--- a/assets/css/cmps/AppNavigator.css
+++ b/assets/css/cmps/AppNavigator.css
@@ -9,9 +9,8 @@
     top: 50px;
     right: 20px;
     background-color: aqua;
-    width: 300px;
     z-index: 8;
-    padding: 1em 0;
+    /* padding: 1em 1em; */
     border-radius: 0.4em;
 
     outline: 10px solid var(--clr-search-bar-shadow-read-filter-2);
@@ -27,7 +26,10 @@
 }
 
 .app-navigator .box {
-    padding: 1em 1.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em 2em;
     cursor: pointer;
 }
 
@@ -37,8 +39,12 @@
 }
 
 .app-navigator img {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     object-fit: contain;
+}
 
+.app-navigator h4 {
+    font-size: 1rem;
+    font-weight: 300;
 }
