--- a/assets/css/cmps/AppNavigator.css
+++ b/assets/css/cmps/AppNavigator.css
@@ -29,7 +29,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2em 2em;
+    padding: 1em 1em;
+    margin: 1em 1em;
     cursor: pointer;
 }
 
